# DjangoDockerProj

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: celery_app.py  manage.py
app/client/: admin.py  models.py
app/client/migrations/: 0001_initial.py
app/dockerapp/: asgi.py  settings.py  urls.py  wsgi.py
app/service/: admin.py  apps.py  models.py  serializers.py  views.py
app/service/migrations/: 0001_initial.py
